Fix date alignment of an ad of the list

--- a/src/app/ads/ads.component.css
+++ b/src/app/ads/ads.component.css
@@ -47,6 +47,7 @@
     color: #07222c;
     font-size: 1.3em;
     font-weight: bold;
+    text-align: left;
 
 }
 
@@ -54,6 +55,7 @@
     width: 10%;
     margin-left: 80%;
     margin-right: 40%;
+    text-align: right;
 }
 
 #image-td {
